@@ -1,6 +1,13 @@
 2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/data/general/DatasetUtilities.java
+    (iterateCategoryRangeBounds): Deprecated,
+    (iterateRangeBounds(CategoryDataset)): New method,
+    (iterateRangeBounds(CategoryDataset, boolean)): Likewise.
+
+2008-03-28  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/data/general/DatasetUtilities.java
     (findRangeBounds(XYDataset, boolean)): Use boolean argument for call to
     iterateRangeBounds(),
     (iterateXYRangeBounds): Deprecated,
